--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,8 @@
     <!-- For Android 10 only. This permission has no effect on Android 11+ -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="29" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="32"/>
     <!-- THE ONLY PERMISSION THAT MATTERS for Android 11, 12, 13, 14 -->
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
         tools:ignore="ScopedStorage" />
@@ -18,13 +19,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.一鍵拍錄刪除器"
+        android:theme="@style/Theme.SingleTakeCleaner"
         android:requestLegacyExternalStorage="true">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.一鍵拍錄刪除器">
+            android:theme="@style/Theme.SingleTakeCleaner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
